# momentum-investing

./: .gitignore  README.md  check_indices.py  momentum_etfs.py  momentum_rs_etfs.py  momentum_rs_stocks.py  momentum_stocks.py  momentum_us_etfs.py  pyproject.toml
bat/: RRGIndicator.bat  gen_tickers_fragment.bat  main.bat  momentum_etfs.bat  momentum_rs_etfs.bat  momentum_rs_stocks.bat  momentum_stocks.bat  momentum_us_etfs.bat  nifty_shop.bat  quality_momentum_rs.bat  quality_momentum_rs_dynamic.bat  quality_momentum_rs_lv.bat  zerodha.bat
client/: zerodha.py
final_result/: momentum_rs_etfs_ranked.xlsx  momentum_rs_stocks_ranked.xlsx  momentum_stocks_ranked.xlsx  momentum_us_etfs_ranked.xlsx  quality_momentum_portfolio_state.json  quality_momentum_rs_dynamic.xlsx  quality_momentum_rs_lv.xlsx  ~$momentum_rs_etfs_ranked.xlsx
momentum/: RRGIndicator.py  backtest_cancel.py  etf_momentum_backtest_ui.py  etf_us_momentum_backtest_ui.py  momentum_etfs.py  momentum_rs_etfs.py  momentum_rs_stocks.py  momentum_stocks.py  momentum_us_etfs.py  nifty_candlestick_backtest_ui.py  quality_momentum_rs.py  quality_momentum_rs_dynamic.py  quality_momentum_rs_lv.py  rrg_app.py  rrg_backtest_positions.py  rrg_backtest_standalone.py  rrg_backtest_ui.py  rrg_backtest_week_sim.py  rrg_busy.py  rrg_core.py  rrg_date_picker.py  rrg_ema_exit.py  rrg_portfolio_exits.py  rrg_portfolio_fill.py  rrg_portfolio_panel.py  rrg_ranking.py  rrg_ref_price.py  rrg_swing_cheat_sheet.py  rrg_ui_copy.py  staggered_dip_backtest_ui.py  stock_momentum_backtest_ui.py
scripts/: gen_tickers_from_csvs.py  (+2 more)
(+154 files in other folders)
