[project]
name = "nifty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "matplotlib>=3.8.0",
    "pandas>=2.0.0",
    "pyotp>=2.9.0",
    "requests>=2.32.4",
    "rich>=13.7.0",
    "scipy>=1.11.0",
    "yfinance>=0.2.0",
]
